styles/home.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 67.5%;
}

body {
    font-family: "Montserrat", sans-serif;
    color: black;
    transition: all 0.2s linear;
    overflow-x: hidden;
}

::selection {
    background-color: none;
    color: none;
}

a {
    text-decoration: none;
}

a,
div.user {
    font-weight: bolder;
}

a,
div.user {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 1.8rem;
    cursor: pointer;
    transition: color 0.2s linear;
    color: white;
}

a:hover,
div.user:hover {
    color: rgb(185, 179, 179);
}

a:active,
div.user:active {
    color: grey;
}

aside.user {
    background-color: white;
    /* padding: 1rem; */
    display: flex;
    flex-direction: column;
    font-size: xx-large;
    position: absolute;
    top: 5px;
    left: 0;
    transition: transform 0.2s linear;
    transform: translateX(-1000px);
    z-index: 20;
    height: 100%;
    margin-inline: 10px;
    border-radius: 10px;
}

.title {
    display: grid;
    place-items: center;
}

aside.user .name {
    text-transform: capitalize;
}

aside.user>div>* {
    padding: 1rem;
}

.close-user {
    display: flex;
    cursor: pointer;
    justify-content: center;
    align-items: center;
    color: rgb(98, 37, 240);
}

.close-user i {
    margin: 1rem 0.5rem;
}

aside.user>* {
    padding: 1rem;
}

aside.user span {
    font-weight: bolder;
}

.address::after,
.address::before {
    display: block;
    width: 100%;
    content: "";
    border: thick solid red;
}

header {
    background-color: #f9f871;
    width: 100%;
    height: 10vh;
    padding: 5px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.logo {
    font-size: x-large;
    font-weight: 600;
    letter-spacing: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo>span:first-child {
    color: #3b283c;
}

.logo>span:last-child {
    color: white;
}

section.sort {
    margin-bottom: 5px;
}

.sort {
    font-size: 1.5rem;
    background-color: #ca7163;
}

#name {
    text-transform: capitalize;
    font-weight: bold;
}

#search {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    padding: 0.5em;
    font-size: small;
    border-radius: 0.5em;
    border: none;
    color: rgb(49, 48, 48);
}

#sort {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    padding: 0.5em;
    margin: 0.5em;
    font-size: small;
    border-radius: 0.5em;
    border: none;
    background-color: rgb(231, 223, 223);
    color: black;
}


/* here */

.sort {
    padding: 10px 5px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #4bbc8e;
    /* background-color: burlywood; */
}

#search-sort {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#search-sort>* {
    padding-inline: 1rem;
}

.products {
    /* background-color: lightgreen; */
    display: grid;
    place-items: center;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 2em 2em;
    padding: 1em;
}

.single-products {
    display: grid;
    grid-template-areas: "title title" "img cateogry" "img rate" "img count" "img price" "img add";
    padding: 5px;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
    border-radius: 5px;
    width: 100%;
    height: 100%;
    text-transform: capitalize;
}

.single-products>* {
    padding: 8px 5px;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    margin: 2px;
    font-size: medium;
    background-color: white;
    transition: background-color 0.2s linear;
    border-radius: 10px;
    display: grid;
    place-items: center;
}

.product-item:hover {
    background-color: rgb(175, 169, 169, 0.1);
}

.single-products .img {
    display: grid;
    place-items: center;
    padding: 0;
    grid-area: img;
    /* background-color: lightseagreen; */
}

img {
    width: 100%;
    width: 100px;
    box-shadow: none;
}

.single-products .title {
    grid-area: title;
    font-size: large;
    font-weight: bold;
}

.single-products .price {
    grid-area: price;
}

div.add-button {
    grid-area: add;
    cursor: pointer;
    background-color: grey;
    width: 100%;
}

div.add-button:hover {
    background-color: rgb(185, 185, 185);
}

div.add-button:active {
    background-color: rgb(233, 227, 227);
}

.single-products .rate {
    grid-area: rate;
}

.single-products .count {
    grid-area: count;
}

.single-products .cateogry {
    grid-area: cateogry;
}

.cart-products {
    display: flex;
    flex-direction: column;
}

#cart-title {
    display: flex;
    flex-direction: column;
    font-size: x-large;
    font-weight: bolder;
}

#cart-title .title {
    display: flex;
    justify-content: center;
    padding-block: 1rem;
}

.single-cart-product {
    display: grid;
    grid-template-areas: "carttitle carttitle" "cartimage cartquantity" "cartimage cartcost";
    margin-block: 1rem;
}

.single-cart-product>* {
    padding: 8px 5px;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    margin: 2px;
    font-size: medium;
    background-color: white;
    transition: background-color 0.2s linear;
    border-radius: 10px;
    display: grid;
    place-items: center;
}

.close {
    font-size: xx-large;
    padding: 1em 0 0 1em;
    cursor: pointer;
}

.cart-container {
    margin: 10px;
    position: absolute;
    top: 0;
    right: 0;
    transition: transform 0.2s linear;
    transform: translateX(1000px);
    z-index: 20;
    width: 686px;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
    padding: 0.5rem;
    border-radius: 10px;
    background-color: white;
}

#overlay {
    transition: background-color 0.1s linear;
}

.overlay {
    position: absolute;
    z-index: 10;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(180, 200, 224, 0.95);
}

.single-cart-product .img {
    grid-area: cartimage;
    min-height: 15rem;
}

.single-cart-product .title {
    grid-area: carttitle;
    font-weight: bold;
}

.single-cart-product .quantity {
    grid-area: cartquantity;
    display: grid;
    place-items: center;
}

.single-cart-product .quantity span {
    padding-block: 1rem;
}

.single-cart-product .quantity i {
    cursor: pointer;
    transition: all 0.2s linear;
    padding: 0.5rem;
}

.quantity i:hover,
.quantity i:focus {
    background-color: grey;
}

.quantity i:active {
    background-color: rgb(23, 24, 24);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}


/* Firefox */

input[type="number"] {
    -moz-appearance: textfield;
}

input[type="number"] {
    padding: 1rem;
    width: 50px;
    border-radius: 10px;
    border: thin solid;
}

.single-cart-product .total-cost {
    grid-area: cartcost;
}

#total-cost {
    display: grid;
    place-items: center;
    font-size: xx-large;
    font-weight: bolder;
    padding-block: 1rem;
}

@media (max-width: 650px) and (min-width: 551px) {
    #name {
        display: flex;
        flex-direction: row;
    }
    .logo {
        letter-spacing: 5px;
    }
}

@media (max-width: 700px) {
    .cart-container {
        width: 90%;
        min-width: 0;
        display: grid;
        place-items: center;
    }
}

@media (max-width: 550px) {
    .logo {
        letter-spacing: 3px;
    }
    .greet {
        display: flex;
        flex-direction: row;
        justify-content: center;
        width: 80%;
        padding-block: 10px;
    }
    .greet>* {
        padding-inline: 1rem;
    }
    #cart-logo a {
        font-size: small;
    }
    select#sort {
        width: 50%;
    }
    section.sort {
        display: flex;
        flex-direction: column;
        padding: 0;
    }
    div.sort {
        padding: 0;
        width: 50%;
    }
    input {
        width: 90%;
    }
    #search-sort {
        width: 100%;
        justify-content: space-around;
    }
    .single-products>* {
        padding-inline: 1px;
    }
    .products,
    .cart-products {
        /* border: solid; */
        padding: 0;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .single-products,
    .single-cart-product {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 90%;
    }
    #total-cost {
        font-size: larger;
    }
    aside.user * {
        font-size: smaller;
        padding: 2px;
    }
}

